# lb_benchmark

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  lb_hot_loop.cpp  lb_mode_apply_forces.cpp  lb_mode_relaxation.cpp  lb_mode_transformation.cpp
libs/: CMakeLists.txt
src/: lb-d3q19.hpp  lb.hpp  lb_old.hpp
src/utils/: inner_product.hpp  inner_product_template.hpp  scalar.hpp
